# cortex

./: .env.example  .gitignore  pyproject.toml
src/cortex/core/: config.py  errors.py  logging.py  models.py  timestamps.py
src/cortex/storage/: database.py  embeddings.py  journal.py  projections.py
tests/: conftest.py  test_config.py  test_database.py  test_embeddings.py  test_errors.py  test_journal.py  test_logging.py  test_models.py  test_projections.py  test_timestamps.py
